--- a/languages/woocommerce-accepted-payment-methods-nl_NL.po
+++ b/languages/woocommerce-accepted-payment-methods-nl_NL.po
@@ -1,7 +1,7 @@
 # This file is distributed under the same license as the WooCommerce Accepted Payment Methods package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2014-01-03 10:54+0100\n"
+"PO-Revision-Date: 2014-01-03 10:57+0100\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -10,8 +10,11 @@ msgstr ""
 "Project-Id-Version: WooCommerce Accepted Payment Methods\n"
 "POT-Creation-Date: \n"
 "Last-Translator: Ramon van Belzen <woocommerce@ramoonus.nl>\n"
-"Language-Team: \n"
+"Language-Team: Ramon van Belzen <github@ramoonus.nl>\n"
 "Language: nl_NL\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-Basepath: ../\n"
+"X-Poedit-SearchPath-0: ..\n"
 
 #: accepted-payment-methods.php:39 accepted-payment-methods.php:178
 msgid "Accepted Payment Methods"
